tests/Rules/Structure/Fixtures/valid/lang_valid_en.html.twig
<!DOCTYPE html>
<html lang="en">
<head><title>Test</title></head>
<body><main><p>Hello</p></main></body>
</html>
