tests/Rules/Structure/Fixtures/invalid/duplicate_landmark_trigger.html.twig
<!DOCTYPE html>
<html>
<head>
</head>
<body>
<header>Nav</header>
<div>Content without main</div>
</body>
</html>
